Add images. Rewrite HTML & CSS.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="game">
+        <div class="game-title"><h1>Rock Paper Scissors!</h1></div>
+        <div class="selection-areas">
+            <div class="player-box">      
+                <div class="player-title"><h1>Human</h1></div>
+                <div class="selection-area">
+                    <div class="rock-box">
+                        <img src="img/rock.png" alt="A drawing of a grey rock.">
+                        <button class="rock-button">Rock</button>
+                    </div>
+                    <div class="paper-box">
+                        <img src="img/paper.png" alt="A drawing of a white piece of paper.">
+                        <button class="paper-button">Paper</button>
+                    </div>
+                    <div class="scissor-box">
+                        <img src="img/scissors.png" alt="A drawing of a pair of scissors">
+                        <button class="scissors-button">Scissors</button>
+                    </div>
+                </div>
+            </div>
+            <div class="ai-box">
+                <div class="player-title"><h1>Computer</h1></div>
+                <div class="selection-area">
+                    <div class="rock-box">
+                        <img src="img/rock.png" alt="">
+                        <button class="rock-button">Rock</button>
+                    </div>
+                    <div class="paper-box">
+                        <img src="img/paper.png" alt="">
+                        <button class="paper-button">Paper</button>
+                    </div>
+                    <div class="scissor-box">
+                        <img src="img/scissors.png" alt="">
+                        <button class="scissors-button">Scissors</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="display-box">
+            <div class="title-area"><h1>PLAY</h1></div>
+            <div class="game-display"><p>Game Information</p></div>
+        </div>
+    </div>
 </body>
 </html>
